--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -1,6 +1,11 @@
 {% extends 'inventory/base.html' %}
 
 {% block content %}
+
+    <div class="buttion_place">
+        <a href="{% url 'addnew' %}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"> + Add Product</a>
+    </div>
+
     <table class="table table-hover">
         <thead>
         <tr>
@@ -16,8 +21,8 @@
 
             <tr>
                 <th>
-                    <a href="{% url 'detail' product.id %}">
-                        {{ product.id }}
+                    <a href="{% url 'detail' product.pk %}">
+                        {{ product.pk }}
                     </a>
                 </th>
                 <td>{{ product.name }}</td>
