Adding new files

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -16,7 +16,8 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'index' %}">Index </a>
+
+      <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'inventory/images/firstfix.png' %}" alt="First Fix"> </a>
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -38,7 +39,7 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Inventory Management System</h1>
+        <h1>First Fix Inventory Management System</h1>
       </div>
         {% block content %}
 
