--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -17,8 +17,8 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'inventory/images/firstfix.png' %}" alt="First Fix"> </a>
-
+      <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'inventory/images/firstfix.png' %}" alt="First Fix"><font align=color="white">First Fix Inventory Management System</font></a>
+      
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -29,17 +29,13 @@
           </li>
 
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
+        
     </nav>
 
     <div class="container">
 
       <div class="starter-template">
-        <h1>First Fix Inventory Management System</h1>
+        
       </div>
         {% block content %}
 
