--- a/inventory/templates/inventory/search.html
+++ b/inventory/templates/inventory/search.html
@@ -1,6 +1,8 @@
-
 {% extends 'inventory/base.html' %} {% block content %}
-<h2 class="product_heder"> Search The Incoming and Outgoing Product Transactions </h1>
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" />
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript">
+</script> <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
+<h2 class="product_heder">Handover Products </h1>
 
 <div class="container col-md-10">
     <form  method="POST">
