--- a/inventory/templates/inventory/incoming_history.html
+++ b/inventory/templates/inventory/incoming_history.html
@@ -5,7 +5,7 @@
     
         <a href="{% url 'addnew' %}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"> + Incoming Products</a>
         <a href="{% url 'outgoing' %}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"> - Outgoing Products</a>
-    
+        <a href="{% url 'history' %}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"> Transaction History</a>
 
     <table class="table table-hover">
         <thead>
