--- a/inventory/templates/inventory/outgoing_history.html
+++ b/inventory/templates/inventory/outgoing_history.html
@@ -3,14 +3,11 @@
 {% block content %}
 
     
-        <a href="{% url 'addnew' %}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"> + Incoming Products</a>
-        <a href="{% url 'outgoing' %}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"> - Outgoing Products</a>
-        <a href="{% url 'history' %}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"> Transaction History</a>
-
+        
     <table class="table table-hover">
         <thead>
-        <tr>
-            <th>#</th>
+        <tr bgcolor="#FF7F50">
+            <th>Serial Number</th>
             <th>Product Id</th>
             <th>Engineer Name</th>
             <th>Quantity</th>
@@ -21,7 +18,7 @@
         <tbody>
         {% for outgoing in lookups %}
 
-            <tr>
+            <tr bgcolor="#C0C0C0">
                 <th>
                     <a href="{% url 'detail' outgoing.pk %}">
                         {{ outgoing.pk }}
